--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</tr>
 		
 		<tr>
-			<td style="background-color: #FCFCFC; width: 500px; padding: 10px 30px; margin: 20px 0px;">
+			<td style="background-color: #FFFFFF; width: 500px; padding: 10px 30px; margin: 20px 0px;">
 				<p style="color: #1C1C1C; font-size: 18px; font-family: Georgia;"><b>
 					Today's top story:
 				</b></p>
@@ -50,7 +50,7 @@
 		</tr>
 		
 		<tr>
-			<td style="background-color: #FCFCFC; width: 500px; padding: 10px 30px; margin: 20px 0px;">
+			<td style="background-color: #FFFFFF; width: 500px; padding: 10px 30px; margin: 20px 0px;">
 				<p style="color: #1C1C1C; font-size: 18px; font-family: Georgia;"><b>
 					Other stories you may like:
 				</b></p>
@@ -80,7 +80,7 @@
 		</tr>
 		
 		<tr>
-			<td style="background-color: #FCFCFC; width: 500px; padding: 10px 30px;">
+			<td style="background-color: #FFFFFF; width: 500px; padding: 10px 30px;">
 				<p style="color: #1C1C1C; font-size: 18px; font-family: Georgia;"><b>
 					Coming up this week:
 				</b></p>
@@ -104,7 +104,7 @@
 		</tr>
 		
 		<tr>
-			<td style="background-color: #FCFCFC; width: 500px; padding: 10px 30px; margin: 20px 0px; background-color: #838282">
+			<td style="width: 500px; padding: 10px 30px; margin: 20px 0px; background-color: #838282">
 				<p style="width: 500px; text-align: center; vertical-align: middle; color: #ECECEC; font-size: 14px; font-family: Arial;">
 					<span style="color: #FFFFFF; font-size: 20px; font-family: Georgia;">Brianna Roser</span>
 					<br><br>
